# fscacher-pkgtester

./: .autorc  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  setup.cfg  tox.ini
.github/workflows/: benchmark.yml  release.yml  test.yml
benchmarks/: cache.py
src/fscacher/: _version.py  cache.py
src/fscacher/tests/: test_cache.py
src/pyfscacher/: __init__.py  _version.py  cache.py
test/: test_cache.py
