[metadata]
name = pyfscacher
description = Caching results of operations on heavy file trees
long_description = file:README.md
long_description_content_type = text/markdown
author = Center for Open Neuroscience
author_email = debian@onerussian.com
maintainer = John T. Wodder II
maintainer_email = pyfscacher@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/con/pyfscacher

keywords =
    ###

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    ###

project_urls =
    Source Code = https://github.com/con/pyfscacher
    Bug Tracker = https://github.com/con/pyfscacher/issues

[options]
packages = find:
package_dir =
    =src
python_requires = ~=3.6
install_requires =
    appdirs == 1.*
    joblib >= 0.17

[options.packages.find]
where = src

[versioneer]
VCS = git
style = pep440
versionfile_source = src/pyfscacher/_version.py
versionfile_build = pyfscacher/_version.py
tag_prefix = v
parentdir_prefix =
